--- a/app/views/businesslogs/new_businesslog.html.erb
+++ b/app/views/businesslogs/new_businesslog.html.erb
@@ -48,12 +48,12 @@
 				<tr>
 					<th class ="center">[バイタル]</th>
 					<th class ="center">[体温]
-					<br><%= f.number_field :log_body_temperature, min: 33, step: '0.1', class: "log", maxlength: "10" %>℃</th>
+					<br><%= f.number_field :log_body_temperature, min: 33, step: '0.1',maxlength: "10" %>℃</th>
 					<th class ="center">[血圧]
-					<br><%= f.number_field :log_pressure_up, class: "log", min: 30, max: 300 %>/
-					<%= f.number_field :log_pressure_down, class: "log", min: 30, max: 300 %></th>
+					<br><%= f.number_field :log_pressure_up, min: 30, max: 300 %>/
+					<%= f.number_field :log_pressure_down, min: 30, max: 300 %></th>
 					<th class ="center">[脈]
-					<br><%= f.number_field :log_pulse,  class: "log", min: 20, max: 200 %></th>
+					<br><%= f.number_field :log_pulse, min: 20, max: 200 %></th>
 					<th class ="center"rowpan="2">［再検査］
 					<br><%= f.check_box :log_check_return ,{}, "true", "false"%></th>
 					<th class ="center">[血圧]<br><%=  f.number_field :re_log_pressure_up, min: 20, max: 200 %>/
